--- a/app/src/main/res/layout/layout_profile.xml
+++ b/app/src/main/res/layout/layout_profile.xml
@@ -3,8 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".DeliveredFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -106,6 +105,7 @@
                     app:boxStrokeColor="@color/BG"
                     app:boxStrokeWidth="2dp"
                     app:hintTextColor="@color/BG"
+                    app:endIconMode="password_toggle"
                     android:hint="Enter New Password"
 
                     >
@@ -128,6 +128,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Change Phone Number"
+                    android:id="@+id/btnUpdatePhone"
                     android:textSize="15sp"
                     app:cornerRadius="10dp"
                     android:textColor="@color/FG"
@@ -144,6 +145,7 @@
                     android:fontFamily="@font/poppins_medium"
                     android:text="Change Password"
                     android:textColor="@color/FG"
+                    android:id="@+id/btnUpdatePassword"
                     android:textSize="15sp"
                     app:cornerRadius="10dp" />
 
