--- a/app/src/main/res/layout/confirmation_password.xml
+++ b/app/src/main/res/layout/confirmation_password.xml
@@ -26,6 +26,7 @@
         app:boxBackgroundMode="outline"
         app:boxStrokeColor="@color/BG"
         app:boxStrokeWidth="2dp"
+        app:endIconMode="password_toggle"
         app:hintTextColor="@color/BG"
         android:hint="Enter Current Password"
 
@@ -36,7 +37,7 @@
 
             android:fontFamily="@font/poppins_medium"
             android:textSize="15sp"
-            android:id="@+id/etUsernameSignin"
+            android:id="@+id/etConfirmPassword"
             android:padding="12dp"
             android:gravity="center_horizontal"
             android:layout_marginBottom="10dp"
@@ -57,6 +58,7 @@
             app:cornerRadius="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginHorizontal="20dp"
+            android:id="@+id/btnConfirmPasswordClose"
             android:backgroundTint="@color/BG"
             android:fontFamily="@font/poppins_medium"
             />
@@ -69,9 +71,11 @@
             app:cornerRadius="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginHorizontal="20dp"
+            android:id="@+id/btnConfirmPasswordConfirm"
             android:backgroundTint="@color/BG"
             android:fontFamily="@font/poppins_medium"
             />
     </LinearLayout>
+
 
 </LinearLayout>
